@@ -4,6 +4,7 @@ import org.springframework.stereotype.Service;
 
 import static uk.gov.moj.cpp.courtscheduler.domain.RequestParameterConstant.MAX_DURATION_FOR_AFTERNOON;
 import static uk.gov.moj.cpp.courtscheduler.domain.RequestParameterConstant.MAX_DURATION_FOR_MORNING;
+import static uk.gov.moj.cpp.courtscheduler.domain.rota.PanelTypes.ADULT;
 
 import uk.gov.moj.cpp.courtscheduler.domain.UpdateCourtSchedule;
 
@@ -12,13 +13,13 @@ import jakarta.json.JsonObject;
 @Service
 public class UpdateCourtScheduleConverter implements Converter<JsonObject, UpdateCourtSchedule> {
     private static final String CROWN = "CROWN";
-    private static final String ADULT = "ADULT";
+    private static final String PANEL = "panel";
 
     @Override
     public UpdateCourtSchedule convert(final JsonObject jsonObject) {
 
-        UpdateCourtSchedule.UpdateCourtScheduleBuilder courtScheduleBuilder = new UpdateCourtSchedule.UpdateCourtScheduleBuilder();
-        String jurisdiction = jsonObject.getString("jurisdiction");
+        final UpdateCourtSchedule.UpdateCourtScheduleBuilder courtScheduleBuilder = new UpdateCourtSchedule.UpdateCourtScheduleBuilder();
+        final String jurisdiction = jsonObject.getString("jurisdiction");
         
         courtScheduleBuilder
                 .withCourtScheduleId(jsonObject.getString("courtScheduleId"))
@@ -31,21 +32,21 @@ public class UpdateCourtScheduleConverter implements Converter<JsonObject, Updat
         // For CROWN: panel is optional, but if supplied must be ADULT
         // For MAGISTRATES: panel is mandatory (validation happens in validator)
         if (CROWN.equalsIgnoreCase(jurisdiction)) {
-            if (jsonObject.containsKey("panel") && !jsonObject.isNull("panel")) {
-                String panel = jsonObject.getString("panel");
-                if (panel != null && !panel.trim().isEmpty() && !ADULT.equalsIgnoreCase(panel)) {
+            if (jsonObject.containsKey(PANEL) && !jsonObject.isNull(PANEL)) {
+                final String panel = jsonObject.getString(PANEL);
+                if (panel != null && !panel.isBlank() && !ADULT.name().equalsIgnoreCase(panel)) {
                     throw new ConverterException("For CROWN jurisdiction, panel must be ADULT if supplied");
                 }
                 // Only set panel if it's ADULT (optional for CROWN, so null/empty is fine)
-                if (panel != null && !panel.trim().isEmpty() && ADULT.equalsIgnoreCase(panel)) {
+                if (panel != null && !panel.isBlank() && ADULT.name().equalsIgnoreCase(panel)) {
                     courtScheduleBuilder.withPanel(panel);
                 }
             }
             // If panel key doesn't exist or is null, don't set it (optional for CROWN)
         } else {
             // For MAGISTRATES, set panel as before (validation happens in validator)
-            if (jsonObject.containsKey("panel") && !jsonObject.isNull("panel")) {
-                courtScheduleBuilder.withPanel(jsonObject.getString("panel"));
+            if (jsonObject.containsKey(PANEL) && !jsonObject.isNull(PANEL)) {
+                courtScheduleBuilder.withPanel(jsonObject.getString(PANEL));
             }
         }
 
